# infinispan-snippets

./: .gitignore  LICENSE  README.adoc
cache-stores/ceph-cache-store/: pom.xml
cache-stores/cloud-cache-store-s3/: pom.xml
cache-stores/cloud-cache-store-swift/: pom.xml
cache-stores/file-cache-store/: pom.xml
cache-stores/leveldb-cache-store/: pom.xml
cache-stores/rocksdb-cache-store/: pom.xml
converters/hr-server-converter/: pom.xml
hr-client/compatibility/: README.adoc
hr-client/compatibility/config/: standalone.xml
hr-client/compatibility/hr-cpp/: CMakeLists.txt
hr-client/compatibility/hr-java/: pom.xml
hr-client/hr-clojure/: README.adoc  README.md  project.clj
hr-client/hr-cpp/: CMakeLists.txt  README.adoc
hr-client/hr-cpp/src/: hrclient.cpp
hr-client/hr-java/: README.adoc  log4j2-trace.xml  pom.xml
hr-client/hr-java/certs/: keystore_client.jks  keystore_server.jks  truststore_client.jks  truststore_server.jks
hr-client/hr-java/conf/: application-roles.properties  application-users.properties  sasl_encryption_only.xml  sasl_exteranl_auth.xml  (+3 more)
hr-client/hr-js/: README.adoc  hr-client.js  package.json
hr-client/hr-scala/: build.sbt
library-mode/cdi/: pom.xml
library-mode/counters/: pom.xml
library-mode/library-basic/: pom.xml
library-mode/locks/: README.adoc  pom.xml
library-mode/marshalling/: pom.xml
library-mode/query/: pom.xml
library-mode/state-transfer/: pom.xml
library-mode/transactions/: pom.xml
protobuf/protobuf-simple/: pom.xml
spark/spark-rdd/: pom.xml
spark/spark-streaming/: README.md  pom.xml
(+85 files in other folders)
